# BEKMP-ECC-benchmark

./: BEKMP.c  BEKMP.h  CMakeLists.txt  README.md  local_sha2.c  local_sha2.h  main.c  params.h  sha.c  sha.h  test.h
